@@ -1,3 +1,10 @@
+2012-06-18  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* matlab/ItkToolbox/MexBaseFilter.hpp: (v0.7.5)
+
+	- Add warning message if grafting output onto Matlab produces a
+	memory leak.
+
 2012-06-17  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* matlab/ItkToolbox/MexBaseFilter.hpp: (v0.7.4)
